# svgfontembed

./: LICENSE  README.md  pyproject.toml
svgfontembed/: _generate_help_text_screenshot.py  svgfontembed.py
